fix(styling): Remove extra margin

--- a/app/_assets/css/hub.css
+++ b/app/_assets/css/hub.css
@@ -14762,15 +14762,9 @@ nav.navigation.posts-navigation {
 }
 
 header.page-header {
-  margin: 100px auto 20px;
+  margin: 10px auto;
   background-color: #ffffff;
   border-bottom: none;
-}
-
-@media (max-width: 1100px) {
-    header.page-header {
-        margin: 50px auto 20px;
-    }
 }
 
 .kong-plugins .cards-collection {
